--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8fbace9f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4510cec250&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8fba945ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8fba945cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f450fe42cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f450fe42f10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8fbaef9450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8fbaef9650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f45103e8550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f45103e8790&gt;]</pre>
 </div>
 
 </div>
