--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc99956ff10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fde1ac73750&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc999236ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc999236cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fde1a63fbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fde1a63fdd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9997dd490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc9997dd690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fde1abed550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fde1ac3a050&gt;]</pre>
 </div>
 
 </div>
