--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6d745918d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f369dc7d9d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6d741ee9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6d741eeb50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f369d8e1a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f369d8e1c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6d747a1350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6d747a14d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f369de943d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f369de945d0&gt;]</pre>
 </div>
 
 </div>
