--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f163c86bd10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb9591d5490&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f163c4c6a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f163c4c6c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb9597af850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb9597afa50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f163ca7c310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f163ca7c510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb959d65210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb959d65410&gt;]</pre>
 </div>
 
 </div>
