--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f44aa064310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdaffe3d550&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f44a913da10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f44a913dc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdaff7999d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdaffa96d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f44a96ef3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f44a96ef5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdaffd69750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdb0003c750&gt;]</pre>
 </div>
 
 </div>
