--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd07aceec90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f69100d1190&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd07ad24a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd07ad24c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f690fa95b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f690fa95d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd07b2d9310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd07b2d9510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f691003a4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f691003a6d0&gt;]</pre>
 </div>
 
 </div>
