--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9b7d23ab90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3ca61b3d50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b7ceffad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9b7ceffcd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ca5b85a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3ca5b85c10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b7d4a7450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9b7d4a7650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ca612b350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3ca612b550&gt;]</pre>
 </div>
 
 </div>
