--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f39db43cc90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5ade0e2450&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f39db0d2810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f39db104bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5addd3dad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5addd3dcd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f39db69f090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f39db6aa450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5ade2e3350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5ade2e3550&gt;]</pre>
 </div>
 
 </div>
