--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f63a665f510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0e488ea7d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f63a6952c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f63a6979d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e48d07ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0e48d07cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f63a6f16350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f63a6f16510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e492ad390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0e492ad590&gt;]</pre>
 </div>
 
 </div>
