--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6f4631a9d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9052720a50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6f46376790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6f46376990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9052385910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9052385b10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6f4692a0d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6f4692a2d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9052941250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9052941450&gt;]</pre>
 </div>
 
 </div>
