--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f95bc89be90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8bc5aa53d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f95bbf54590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f95bc22e950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8bc5476a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8bc5476c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f95bc7f92d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f95bc805390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8bc5a27390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8bc5a275d0&gt;]</pre>
 </div>
 
 </div>
