--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6a96362810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc57e249190&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6a96677ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6a96677cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc57e827750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc57e827950&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6a96c1d390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6a96c1d590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc57edca090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc57edca290&gt;]</pre>
 </div>
 
 </div>
