--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4f6d870e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc9ba655b10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4f6d4e1b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4f6d4e1d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9ba015bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc9ba015dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4f6dadb090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4f6da956d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9ba5c6590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc9ba5c6790&gt;]</pre>
 </div>
 
 </div>
