--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f88a580a9d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6cf2260e90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f88a5528610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f88a5528990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6cf1ecca90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6cf1eccc90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f88a5add3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f88a5add590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6cf24cb410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6cf24845d0&gt;]</pre>
 </div>
 
 </div>
