--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9c8308ef50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd83a477a50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c82cd9b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c82cd9f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd83964e950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd83964eb50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c83290490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c83290690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd839c01350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd839c01550&gt;]</pre>
 </div>
 
 </div>
